🎨 Rename main.html file + Edited the format

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<body>
 		<h1>Hi!</h1>
 		<h3>🦺✨ This page is under construction ✨🦺</h3>
-		<pre><a href="main.html">Go here</a> if you want to see the progress so far.</pre>
+		<pre><a href="HTML.html">Go here</a> if you want to see the progress so far.</pre>
 	</body>
 </html>
