--- a/index.html
+++ b/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-	<head>
-		<meta charset="utf-8">
-		<title>Angelique Rafael</title>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title>Angelique Rafael</title>
 
-	<body>
-		<h1>Hi!</h1>
-		<h3>🦺✨ This page is under construction ✨🦺</h3>
-		<pre><a href="HTML.html">Go here</a> if you want to see the progress so far.</pre>
-	</body>
+	<!-- Bootstrap -->
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="./css/styles.css">
+</head>
+
+<body>
+	<div class="letter">
+		<div class="container">
+			<br><br><br>
+			<h3>My name is Angelique B. Rafael</h3>
+			<p>
+				I am a Computer Engineering graduate of University of the Philippines Diliman.<br>
+				Currently, I am self-learning HTML, CSS, and Bootstrap. <a href="HTML.html">Go here</a> if you want to see the progress of that so far.
+			</p>
+		</div>
+
+
+		<div class="container">
+			<h1>Education background</h1>
+			<div class="container row">
+				<h2>High School</h2>
+				<div class="col">
+					<img src="https://www.mapsa.edu.ph/img/KADSA(kalookan)/saint-james-academy.png" alt="St. James Academy of Malabon City logo" height=150>
+				</div>
+				<div class="col-10">
+					<h4>St. James Academy of Malabon City</h4>
+					<p>
+						<b>June 2011 - March 2015</b><br>
+						Third Honorable Mention
+					</p>
+				</div>
+			</div>
+
+			<div class="container row">
+				<h2>Undergraduate</h2>
+				<div class="col">
+					<img src="https://2.bp.blogspot.com/-ZBx10yz-b7E/WOMCHKue-GI/AAAAAAAAANA/8dAgBUO12pMp6K7uyeIxmtCAUdbkHo0WwCLcB/s320/UNIVERSITY%2BOF%2BTHE%2BPHILIPPINES.png" alt="University of the Philippines Diliman logo" height=150>
+				</div>
+				<div class="col-10">
+					<h4>University of the Philippines Diliman</h4>
+					<p>
+						<b>August 2015 - July 2020</b><br>
+						Bachelor of Computer Engineering
+					</p>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="container">
+			<h1>Work Experience</h1>
+
+		</div>
+
+
+		<div class="container">
+			<h1>Skills</h1>
+			<div class="container">
+				<h2>Programming Skills</h2>
+
+			</div>
+
+			<div class="container">
+				<h2>Soft Skills</h2>
+
+			</div>
+		</div>
+
+
+		<div class="container">
+			<h1>Affiliations</h1>
+
+		</div>
+
+	</div>
+</body>
 </html>
