--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 	<!-- Local CSS files -->
 	<link rel="stylesheet" href="./css/styles.css">
+
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="./Assets/SVG/Rose-1.png">
 </head>
 
 <body>
