✨ Add more CSS files + 🎨 Change the intro design
✨ Added icons in Contact Me section
✨ Graph CSS style
🎨 Moved Letter style in its own CSS file
🎨 Updated some colors

--- a/HTML.html
+++ b/HTML.html
@@ -263,6 +263,8 @@ That you are all I need (You are all I need)
 				<li><a href="https://www.tutorialbrain.com/css_tutorial/css_font_family_list/">CSS font family list</a></li>
 				<li><a href="https://getbootstrap.com/">Bootstrap</a></li>
 				<li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Tricks: Flexbox</a></li>
+				<li><a href="https://www.youtube.com/watch?v=vFzUVINwnFo">Creating Full Page Sections using HTML & CSS - Web Design Tutorial</a></li>
+				<li><a href="https://www.magicpattern.design/tools/css-backgrounds">CSS Background Patterns</a></li>
 			</ul>
 		</div>
 
