--- a/index.html
+++ b/index.html
@@ -14,24 +14,36 @@
 
 	<!-- Local CSS files -->
 	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="./css/letter-style.css">
+	<link rel="stylesheet" href="./css/graph-style.css">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="./Assets/SVG/Rose-1.png">
+
+	<!-- Google fonts -->
+	<style>
+	@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+	</style>
 </head>
 
 <body>
-	<div class="letter">
+	<section class="graph">
 		<div class="container">
 			<br><br><br>
-			<h3>My name is Angelique B. Rafael</h3>
+			<h1>My name is Angelique B. Rafael</h1>
 			<p>
 				I am a Computer Engineering graduate of University of the Philippines Diliman.<br>
+				I'm capable of self-learning different coding languages, following timelines and deadlines, and communicating ideas to people of differing backgrounds.<br>
 				Currently, I am self-learning HTML, CSS, and Bootstrap. <a href="HTML.html">Go here</a> if you want to see the progress of that so far.
 			</p>
+			<br><br><br>
 		</div>
+	</section>
 
 
+	<div class="letter">
 		<div class="container">
+			<br>
 			<h1>
 				<img src="./Assets/SVG/Rose.png" style="transform: rotate(330deg)" height=50>
 				Education background
@@ -204,17 +216,27 @@
 				<i class="bi bi-telephone-fill"></i>
 			</h3>
 			<p>
-				Email: angelique.rafael@eee.upd.edu.ph <br>
-				LinkedIn: <a href="https://www.linkedin.com/in/angelique-rafael-559108225/">https://www.linkedin.com/in/angelique-rafael-559108225/</a><br>
-				GitHub: <a href="https://github.com/JelloJill">https://github.com/JelloJill</a><br>
+				<i class="bi bi-envelope-fill"></i>
+				<b>Email: </b>
+				<a href="mailto:angelique.rafael@eee.upd.edu.ph">angelique.rafael@eee.upd.edu.ph</a><br>
+
+				<i class="bi bi-linkedin"></i>
+				<b>LinkedIn: </b>
+				<a href="https://www.linkedin.com/in/angelique-rafael-559108225/">https://www.linkedin.com/in/angelique-rafael-559108225/</a><br>
+
+				<i class="bi bi-github"></i>
+				<b>GitHub: </b>
+				<a href="https://github.com/JelloJill">https://github.com/JelloJill</a><br>
 			</p>
 		</div>
 
 
-		<div class="container" style="background-color: white;">
-			<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-				<p>© 2021 Angelique Rafael. All rights reserved.</p>
-			</footer>
+		<div class="w-100" style="background-color: #ff7493;">
+			<div class="container">
+				<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+					<p style="color: white;">© 2021 Angelique Rafael. All rights reserved.</p>
+				</footer>
+			</div>
 		</div>
 	</div>
 </body>
