--- a/HTML.html
+++ b/HTML.html
@@ -9,12 +9,47 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 
-	<!-- CSS -->
+	<!-- Local CSS files -->
 	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="./css/letter-style.css">
+	<link rel="stylesheet" href="./css/graph-style.css">
+
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="./Assets/SVG/Rose-1.png">
+
+	<!-- Google fonts -->
+	<style>
+	@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+	</style>
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="https://jellojill.github.io/">
+			<img src="./Assets/SVG/Rose-1.png" width="30" height="30" alt="">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#"><b>HTML Journey</b></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="About.html">About Me</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+
 	<div class="container">
 		<div class="m-1">
 			<br>
