--- a/HTML.html
+++ b/HTML.html
@@ -28,24 +28,20 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="https://jellojill.github.io/">
-			<img src="./Assets/SVG/Rose-1.png" width="30" height="30" alt="">
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="https://jellojill.github.io/">
+				<img src="./Assets/SVG/Rose-1.png" width="30" height="30" alt="">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+	    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	      <div class="navbar-nav">
 					<a class="nav-link" href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#"><b>HTML Journey</b></a>
-				</li>
-				<li class="nav-item">
+					<a class="nav-link active" href="#">HTML Journey</a>
 					<a class="nav-link" href="About.html">About Me</a>
-				</li>
-			</ul>
+				</div>
+			</div>
 		</div>
 	</nav>
 
