--- a/index.html
+++ b/index.html
@@ -28,25 +28,21 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="https://jellojill.github.io/">
-			<img src="./Assets/SVG/Rose-1.png" width="30" height="30" alt="">
-		</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="#"><b>Home</b></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="HTML.html">HTML Journey</a>
-				</li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="About.html">About Me</a>
-				</li>
-	    </ul>
-	  </div>
+		<div class="container-fluid">
+			<a class="navbar-brand" href="https://jellojill.github.io/">
+				<img src="./Assets/SVG/Rose-1.png" width="30" height="30" alt="">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+	    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	      <div class="navbar-nav">
+					<a class="nav-link active" href="#">Home</a>
+					<a class="nav-link" href="HTML.html">HTML Journey</a>
+					<a class="nav-link" href="About.html">About Me</a>
+				</div>
+			</div>
+		</div>
 	</nav>
 
 
