🎨 Updated HTML.html + ✨ New graph CSS
✨ Green graph style has been added
🎨 HTML codes are updated based on the changes in CSS
🎨 Adjusted the layout of HTML.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</nav>
 
 
-	<section class="fullpage graph">
+	<section class="fullpage graph-pink">
 		<div class="container">
 			<br><br><br>
 			<h1>My name is Angelique B. Rafael</h1>
